--- a/docs/assets/styles/my-buttons.scss
+++ b/docs/assets/styles/my-buttons.scss
@@ -98,6 +98,25 @@
     cursor: pointer;
 }
 
+.minus {
+    width: 40px;
+    height: 40px;
+    background: white;
+    border-radius: 50%;
+    border: 1px solid var(--gray-5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    color: var(--my-gray);
+    cursor: pointer;
+    .minus-inside {
+        width: 20px;
+        height: 4px;
+        background-color: var(--gray-5);
+    }
+}
+
 .light-purple-button,
 .error-button {
     border-radius: 10px;
@@ -141,7 +160,7 @@
     background-color: #d8dbed;
     color: black;
     text-align: center;
-    padding: 5px;
+    padding: 10px 15px;
     cursor: pointer;
     width: 200px;
     box-sizing: border-box;
